# dsl_cpe_control_vrx

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in
build_win32/: dsl_cpe_control_version.h
build_win32/vc7/: dsl_cpe_control.sln  dsl_cpe_control.vcproj
scripts/: Makefile  dsl_cpe_pipe.sh
src/: Makefile  Makefile.am  Makefile.in  dsl_cpe_bnd.c  dsl_cpe_bnd.h  dsl_cpe_bnd_vrx.c  dsl_cpe_bnd_vrx.h  dsl_cpe_cli.c  dsl_cpe_cli.h  dsl_cpe_cli_access.c  dsl_cpe_cli_access2.c  dsl_cpe_cli_autogen.c  dsl_cpe_cli_console.c  dsl_cpe_cli_console.h  dsl_cpe_cli_mib.c  dsl_cpe_cli_pipe.c  dsl_cpe_cli_vrx.c  dsl_cpe_config.h  dsl_cpe_config.h.in  dsl_cpe_control.c  dsl_cpe_control.h  dsl_cpe_debug.c  dsl_cpe_debug.h  dsl_cpe_debug_vrx.c  dsl_cpe_debug_vrx.h  dsl_cpe_debug_vxx.c  dsl_cpe_debug_vxx.h  dsl_cpe_dti.c  dsl_cpe_dti.h  dsl_cpe_init_cfg.c  dsl_cpe_init_cfg.h  dsl_cpe_linux.c  dsl_cpe_linux.h  dsl_cpe_os.h  dsl_cpe_os_lint_map.h  dsl_cpe_rtems.c  dsl_cpe_rtems.h  dsl_cpe_simulator.c  dsl_cpe_simulator.h  dsl_cpe_soap.c  (+11 more)
tools/pipe/: Makefile.am  dsl_pipe_client.c  dsl_pipe_client.h  dsl_pipe_lib.c
